--- a/_posts/2019-04-20-Hi,-James.md
+++ b/_posts/2019-04-20-Hi,-James.md
@@ -10,8 +10,14 @@ image: https://pic.images.ac.cn/image/5e9c7b0165968
 image-sm: https://pic.images.ac.cn/image/5e9c7b0165968
 ---
 
-说到James，就让我想起The End of the F***ing World里面的男主。不过和剧里冷淡孤僻的James不一样，我合作的James是一个活泼开朗人见人爱的美国高中生，甚至比埃里克斯·劳瑟还要更帅一点。论从小帅到大是一种什么样的体验。
+说到James，就让我想起The End of the F***ing World里面的男主。不过和剧里冷淡孤僻的James不一样，我合作的James是一个活泼开朗人见人爱的美国高中生，甚至比埃里克斯·劳瑟还要更帅一点。论从小帅到大是一种什么样的体验？没帅过，咱也不知道。关键是人家从小就想着Make America Great Again(not with Trump)，小小年纪，志存高远。
 
-<img src="https://pic.images.ac.cn/image/5e9c7eda520f1">
+<img src="https://pic.images.ac.cn/image/5e9c8def4e42c">
 
 去年勾搭上James的时候他的TikTok账号只有几十万粉丝，现在已经是坐拥1.8M粉丝的百万级网红了。人怕出名*怕壮，前断时间再找到James，他已经学会狮子大开口了。想起去年找他做10几个系列视频还不到1000美金，可叹已经不再是当初的那个少年。
+
+而他的小老弟Matthewdrou，同样帅气可人。于是我和James共谋了一个弟弟网恋奔现没想到对方却是个猥琐大哥，James通过FamiSafe App的可疑信息预警和定位功能及时解救弟弟的沙雕视频。
+
+```
+<iframe width="640" height="480" src="//player.bilibili.com/player.html?aid=752757252&bvid=BV1Jk4y1R7iV&cid=180580181&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>`
+```
