--- a/_posts/2019-04-20-Hi,-James.md
+++ b/_posts/2019-04-20-Hi,-James.md
@@ -10,19 +10,19 @@ image: https://s1.ax1x.com/2020/04/20/J3F28g.jpg
 image-sm: https://s1.ax1x.com/2020/04/20/J3F28g.jpg
 ---
 
-说到James，让我想起The End of the F***ing World里面的男主。不过和剧里冷淡孤僻的James不一样，我合作的James是一个活泼开朗人见人爱的美国高中生，甚至比埃里克斯·劳瑟还要更帅一点。论从小帅到大是一种什么样的体验？没帅过，咱也不知道。关键是人家从小就想着Make America Great Again(not with Trump)，非常酷儿。
+说到James，让我想起The End of the F***ing World里面的男主。不过和剧里冷淡孤僻的James不一样，我合作的James是一个活泼开朗人见人爱的美国高中生，甚至比埃里克斯·劳瑟还要更帅点。关键是从小就有着Make America Great Again(not with Trump)的美国梦，酷儿。
 
-<img src="https://pic.images.ac.cn/image/5e9c8def4e42c">
+<img src="https://s1.ax1x.com/2020/04/20/J3kkxH.jpg" alt="J3kkxH.jpg" border="0" />
 
-去年勾搭上James的时候他的TikTok账号只有几十万粉丝，现在已经是坐拥1.8M粉丝的百万级网红了。人怕出名*怕壮，前断时间再找到James，他已经学会狮子大开口了。想起去年做10几个还不到1000美金，少年已经不再是曾经的那个少年。
+去年勾搭上James的时候他的TikTok账号只有几十万粉丝，现在已经是坐拥1.8M粉丝的百万级网红了。人怕出名*怕壮，前断时间再找到James，他已经学会狮子大开口了。想起去年做10几个视频不到1000美金，如今的少年不再是曾经的那个少年。
 
-而他的小老弟Matthewdrou，同样帅气可人。于是我和James共谋了一个弟弟网恋奔现没想到对方是个猥琐大哥，James通过FamiSafe App的可疑信息预警和定位功能及时解救弟弟的沙雕视频。观看并不算高，12.1K，点赞1851，但在评论里却看到不少对产品正向的反馈。
+而他的小老弟Matthewdrou，同样帅气可人。于是我和James共谋了一个弟弟网恋奔现对方是个猥琐大哥的沙雕视频，James通过FamiSafe App的可疑信息预警和定位功能及时解救弟弟。观看并不算高，12.1K，点赞1851，但在评论里却看到不少对产品正向的反馈。
 
 <iframe width="640" height="480" src="//player.bilibili.com/player.html?aid=752757252&bvid=BV1Jk4y1R7iV&cid=180580181&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
 
  TikTok上面放了简短版本，观看并不算高，12.1K，点赞1851，但在评论里有看到不少粉丝对产品正向的反馈。特别是有妈妈粉留言“Stay SAFE and use FamiSafe"。尽管兄弟两演技略显生(zhuo)涩(lie),但70美金的预算看着还是挺感动的。
  
- <img src="https://pic.images.ac.cn/image/5e9c936e52d2c">
+ <img src="https://s1.ax1x.com/2020/04/20/J3miJP.jpg" alt="J3miJP.jpg" border="0" />
 
 那时候James正在山里面开心地过暑假，穿着FamiSafe的T-shirt和一帮小朋友到处拍视频，虽然从理论上说并不太能刺激家长用户的购买，但确实咱也基本没有付推广费，爱拍就多拍点，开心最重要。
 
@@ -36,22 +36,27 @@ image-sm: https://s1.ax1x.com/2020/04/20/J3F28g.jpg
 
 推动James做采访并不是一件简单的事情，白天要上课，下课要玩，空余的时间并不多。而网络霸凌本身是个相对严肃的话题，相比问女孩们自己的分数，前者还是太过于枯燥无味了。对于James这种从小集万千宠爱于一身的小帅哥来说，应该是比较少这方面的困扰，不过James跟我说他以前也经历过因为做视频被人骂是Gay的经历。他说：Some guys are just scared and trying to making themselves look better by putting you down，这句话倒是很有道理。我帮了他做了详细的采访话题策划，一个话题至少由三个小片段组成。我北京时间早上9点上班，James美国时间晚上9点会和我聊聊视频的进展。剪切视频并不是个简单的工作，James有时会临时抱佛脚熬夜到十一二点。于是，就有了以下的这些视频：
 
-<img src="https://pic.images.ac.cn/image/5e9ca999a0e44">
+
+<img src="https://s1.ax1x.com/2020/04/20/J3Z738.jpg" alt="J3Z738.jpg" border="0" />
 
 <iframe width="640" height="480" src="//player.bilibili.com/player.html?aid=795335527&bvid=BV17C4y1x7g1&cid=180524845&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
 
-<img src="https://pic.images.ac.cn/image/5e9cabb5c13ce">
+<img src="https://s1.ax1x.com/2020/04/20/J3VrQg.jpg" alt="J3VrQg.jpg" border="0" />
 
 <iframe width="640" height="480" src="//player.bilibili.com/player.html?aid=455274315&bvid=BV1Y5411t7f5&cid=180557005&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
 
-<img src="https://pic.images.ac.cn/image/5e9cabba8d484">
+<img src="https://s1.ax1x.com/2020/04/20/J3ELRS.jpg" alt="采访问题 3" border="0">
 
 <iframe width="640" height="480" src="//player.bilibili.com/player.html?aid=967872258&bvid=BV1Cp4y1X75V&cid=180519919&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
 
-<img src="https://pic.images.ac.cn/image/5e9cabb818dd5">
+
+<img src="https://s1.ax1x.com/2020/04/20/J3EbPf.jpg" alt="采访问题 4" border="0">
+
 
 <iframe width="640" height="480" src="//player.bilibili.com/player.html?aid=710259813&bvid=BV1UQ4y1K7Tb&cid=180549031&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
 
+<img src="https://s1.ax1x.com/2020/04/20/J3E7IP.jpg" alt="采访问题 5" border="0">
 
-<img src="https://pic.images.ac.cn/image/5e9cabb960ec5">
 <iframe width="640" height="480" src="//player.bilibili.com/player.html?aid=752857500&bvid=BV1Qk4y1R7ac&cid=180507671&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
+
+
