--- a/_posts/2019-04-20-Hi,-James.md
+++ b/_posts/2019-04-20-Hi,-James.md
@@ -1,4 +1,5 @@
 ---
+​---
 layout: post
 title: "Hi, James"
 date: 2019-04-20
@@ -8,7 +9,7 @@ categories:
 description:
 image: https://s1.ax1x.com/2020/04/20/J3F28g.jpg
 image-sm: https://s1.ax1x.com/2020/04/20/J3F28g.jpg
----
+​---
 
 说到James，让我想起The End of the F***ing World里面的男主。不过和剧里冷淡孤僻的James不一样，我合作的James是一个活泼开朗人见人爱的美国高中生，甚至比埃里克斯·劳瑟还要更帅点。关键是从小就有着Make America Great Again(not with Trump)的美国梦，酷儿。
 
@@ -37,26 +38,27 @@ image-sm: https://s1.ax1x.com/2020/04/20/J3F28g.jpg
 推动James做采访并不是一件简单的事情，白天要上课，下课要玩，空余的时间并不多。而网络霸凌本身是个相对严肃的话题，相比问女孩们自己的分数，前者还是太过于枯燥无味了。对于James这种从小集万千宠爱于一身的小帅哥来说，应该是比较少这方面的困扰，不过James跟我说他以前也经历过因为做视频被人骂是Gay的经历。他说：Some guys are just scared and trying to making themselves look better by putting you down，这句话倒是很有道理。我帮了他做了详细的采访话题策划，一个话题至少由三个小片段组成。我北京时间早上9点上班，James美国时间晚上9点会和我聊聊视频的进展。剪切视频并不是个简单的工作，James有时会临时抱佛脚熬夜到十一二点。于是，就有了以下的这些视频：
 
 
-<img src="https://s1.ax1x.com/2020/04/20/J3Z738.jpg" alt="J3Z738.jpg" border="0" />
+<img src="https://s1.ax1x.com/2020/04/20/J3mceH.png" alt="J3mceH.png" border="0" />
 
 <iframe width="640" height="480" src="//player.bilibili.com/player.html?aid=795335527&bvid=BV17C4y1x7g1&cid=180524845&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
 
-<img src="https://s1.ax1x.com/2020/04/20/J3VrQg.jpg" alt="J3VrQg.jpg" border="0" />
+<img src="https://s1.ax1x.com/2020/04/20/J3mWFI.png" alt="J3mWFI.png" border="0" />
+
 
 <iframe width="640" height="480" src="//player.bilibili.com/player.html?aid=455274315&bvid=BV1Y5411t7f5&cid=180557005&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
 
-<img src="https://s1.ax1x.com/2020/04/20/J3ELRS.jpg" alt="采访问题 3" border="0">
+<img src="https://s1.ax1x.com/2020/04/20/J3m2TA.png" alt="J3m2TA.png" border="0" />
+
 
 <iframe width="640" height="480" src="//player.bilibili.com/player.html?aid=967872258&bvid=BV1Cp4y1X75V&cid=180519919&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
 
 
-<img src="https://s1.ax1x.com/2020/04/20/J3EbPf.jpg" alt="采访问题 4" border="0">
+<img src="https://s1.ax1x.com/2020/04/20/J3mgwd.png" alt="J3mgwd.png" border="0" />
 
 
 <iframe width="640" height="480" src="//player.bilibili.com/player.html?aid=710259813&bvid=BV1UQ4y1K7Tb&cid=180549031&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
 
-<img src="https://s1.ax1x.com/2020/04/20/J3E7IP.jpg" alt="采访问题 5" border="0">
+<img src="https://s1.ax1x.com/2020/04/20/J3myOe.png" alt="J3myOe.png" border="0" />
 
 <iframe width="640" height="480" src="//player.bilibili.com/player.html?aid=752857500&bvid=BV1Qk4y1R7ac&cid=180507671&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
-
-
+---
