--- a/_posts/2019-04-20-Hi,-James.md
+++ b/_posts/2019-04-20-Hi,-James.md
@@ -34,18 +34,18 @@ image-sm: https://s1.ax1x.com/2020/04/20/J3F28g.jpg
 显然James的暑假过得愉快。翻到他暑假去露营拍的采访视频，一群妹纸围着他，他问：如果1-10分给我打分，你们愿意给我打多少分？女生们一个个回答：Ten，Eleven，Twelve甚至有人喊出Fifty，James开心地和妹妹们拍拍手。只有一位老哥面色严肃地说：Three and a half。
 
 
-<img width="100" height="100"
-src="https://s1.ax1x.com/2020/04/21/J3nXHH.gif" alt="J3nXHH.gif" border="0" />
-
-
+<center>
+<img src="https://s1.ax1x.com/2020/04/21/J3nXHH.gif" width = "100" height = "100" alt="J3nXHH.gif" align=center />
+</center>
 
 暑假快要过去，James就要开学了。当时我们定了#NoCyberbullying的活动主题，我突然想到，是不是可以让James用采访的形式就网络霸凌的相关话题去和学校的师生互动？虽然大范围是在学生之间宣传曝光，但一来推广成本不高；二来在线下校园推广活动，活动波及的范围越大，越有可能引起成年人的关注；三来在TikTok线上曝光，给成长期的产品做铺垫宣传；四来这些真实的富有生活气息的素材可以在官方渠道加工利用。整体来说，对塑造品牌形象、扩大品牌影响力是有积极意义的。
 
 为了让James看起来更像我们的发言人，我在Custom Ink为James定制了一件帅气的T-shirt。
 
 <center>
-<img width="270" height="230" src="https://s1.ax1x.com/2020/04/21/J3QsZF.png" alt="J3QsZF.png" border="0" />
+<img src="https://s1.ax1x.com/2020/04/21/J3QsZF.png" width = "270" height = "230" alt="J3QsZF.png" align=center />
 </center>
+
 
 推动James做采访并不是一件简单的事情，白天要上课，下课要玩，空余的时间并不多。而网络霸凌本身是个相对严肃的话题，相比问女孩们自己的分数，前者还是过于枯燥无味。对于James这种小帅哥来说，应该也比较少这方面的困扰，不过James跟我说他也曾经历过因为做视频被人骂是Gay的惨痛过往。他说：Some guys are just scared and trying to making themselves look better by putting you down，这话倒很有道理，果然是个积极阳光的少年。
 
@@ -89,11 +89,11 @@ src="https://s1.ax1x.com/2020/04/21/J3nXHH.gif" alt="J3nXHH.gif" border="0" />
 
 James小天使后面还免费帮我们做了一些沙雕视频，果然还是沙雕视频比较有吸引力，其中有一个获得了28W的曝光。
 
-<iframe src="//player.bilibili.com/player.html?aid=370367539&bvid=BV1ZZ4y1x7E1&cid=180574547&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
+<iframe width="640" height="480" src="//player.bilibili.com/player.html?aid=370367539&bvid=BV1ZZ4y1x7E1&cid=180574547&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
 
-<iframe src="//player.bilibili.com/player.html?aid=242757012&bvid=BV1Se411W767&cid=180571238&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
+<iframe width="640" height="480" src="//player.bilibili.com/player.html?aid=242757012&bvid=BV1Se411W767&cid=180571238&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
 
-<iframe src="//player.bilibili.com/player.html?aid=285283531&bvid=BV1Ff4y1S7ns&cid=180567786&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
+<iframe width="640" height="480" src="//player.bilibili.com/player.html?aid=285283531&bvid=BV1Ff4y1S7ns&cid=180567786&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
 
 在#NoCyberbullying的活动中，James为我在TikTok贡献了近50W的品牌曝光。
 
