--- a/_posts/2020-05-04-ZAFUL是如何做到出海品牌25强的？.md
+++ b/_posts/2020-05-04-ZAFUL是如何做到出海品牌25强的？.md
@@ -17,7 +17,7 @@ image-sm: https://s1.ax1x.com/2020/05/03/Ypgo8J.jpg
 
 <img src="https://s1.ax1x.com/2020/05/04/Yp4nud.jpg" alt="Yp4nud.jpg" border="0" />
 
-zaful是环球易购旗下的自营服装电商平台，成立于2014年，5年的时间，Zaful跻身全球快时尚品牌阵营，做到出海品牌23强（相较去年上升11位，品牌力指数同比提升43%），时尚类第二的呢？
+zaful是环球易购旗下的自营服装电商平台，成立于2014年，5年的时间，Zaful是怎么跻身全球快时尚品牌阵营，做到出海品牌23强（相较去年上升11位，品牌力指数同比提升43%），时尚类第二的呢？
 
 作为环球易购Zaful的前员工，我可以和大家聊一聊。
 
