--- a/_posts/2020-05-04-ZAFUL是如何做到出海品牌25强的？.md
+++ b/_posts/2020-05-04-ZAFUL是如何做到出海品牌25强的？.md
@@ -166,3 +166,9 @@ ZAFUL在海外市场取得的成功，在于一手抓增长，一手抓品牌，
 同时紧紧围绕落地，扎扎实实打好本地化。与素人网红合作、做高校的本地化线下活动。参加伦敦时装周，在时代广场做户外广告，都是增加当地知名度的有效方式。
 
 营销具有前瞻性，建立自己的KOL网红池，扶持合作的网红；把比较新的直播带货实施到国外，和猎豹的渠道合作，甚至自己建立渠道，都是比较前沿的，并且具有一定前瞻性。
+
+2020年ZAFUL又会有什么新变化呢？拭目以待。
+
+最后，工位脏脏熊镇楼。
+
+<img src="https://s1.ax1x.com/2020/05/04/YPUbwQ.jpg" alt="YPUbwQ.jpg" border="0" />
