--- a/_posts/2020-04-20-Hi,-James.md
+++ b/_posts/2020-04-20-Hi,-James.md
@@ -6,8 +6,8 @@ categories:
    - TikTok
    - NoCyberbullying
 description:
-image: https://s1.ax1x.com/2020/04/20/J3F28g.jpg
-image-sm: https://s1.ax1x.com/2020/04/20/J3F28g.jpg
+image: https://s1.ax1x.com/2020/05/06/YkorsP.jpg
+image-sm: https://s1.ax1x.com/2020/05/06/YkorsP.jpg
 ---
 
 说到James，让我想起The End of the F***ing World里面的男主。不过和剧里冷淡孤僻的James不一样，我合作的James是一个活泼开朗人见人爱的美国高中生，甚至比埃里克斯·劳瑟还要更帅点。关键是从小就有着Make America Great Again(not with Trump)的美国梦，酷儿。
